Add Image Upload

--- a/AddressBook/Views/Contacts/Edit.cshtml
+++ b/AddressBook/Views/Contacts/Edit.cshtml
@@ -63,9 +63,9 @@
                 <span asp-validation-for="Created" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageDate" class="control-label"></label>
-                <input asp-for="ImageDate" class="form-control" />
-                <span asp-validation-for="ImageDate" class="text-danger"></span>
+                <label asp-for="ImageData" class="control-label"></label>
+                <input asp-for="ImageData" class="form-control" />
+                <span asp-validation-for="ImageData" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImageType" class="control-label"></label>
