--- a/AddressBook/Views/Contacts/Index.cshtml
+++ b/AddressBook/Views/Contacts/Index.cshtml
@@ -43,7 +43,7 @@
                 @Html.DisplayNameFor(model => model.Created)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageDate)
+                @Html.DisplayNameFor(model => model.ImageData)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ImageType)
@@ -85,7 +85,7 @@
                 @Html.DisplayFor(modelItem => item.Created)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageDate)
+                @Html.DisplayFor(modelItem => item.ImageData)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ImageType)
